bug fixed with the header on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ h1, h2, p {
     width: 100%;
     min-height: 100vh;
     font-family: 'Comfortaa', cursive;
+    display: grid;
 }
 
 .cover-all {
@@ -24,7 +25,8 @@ header {
     width: 100%;
     height: 12vh;
     padding: 2%;
-    display: flex;
+    display: grid;
+    grid-template-columns: 50% 50%;
     align-items: center;
     z-index: 5;
 }
@@ -227,7 +229,6 @@ header .date {
         overflow: hidden;
     }
     header {
-        display: grid;
         grid-template-columns: 60% 20% 20%;
         grid-template-areas: "a b c";
     }
@@ -242,7 +243,6 @@ header .date {
     }
     header .search-box {
         width: 100%;
-        height: 26px;
         grid-area: b;
     }
     header .date {
